# football-intelligence-platform

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/decisions/: ADR-001-configuration-system.md
scripts/: test_api.py  test_config.py
src/fip/: cli.py
src/fip/api/: __init__.py  client.py  exceptions.py  rate_limiter.py  retry.py
src/fip/collectors/: __init__.py  base.py  fixtures.py
src/fip/config/: __init__.py  paths.py  settings.py
src/fip/logging/: logger.py
